--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 	<p>
 		<code>&lt;sw-image replace img text="I am replaced with an &amp;lt;img&amp;gt; element"&gt;&lt;/sw-image&gt;</code>
 		<br>
-		<sw-image replace img></sw-image>
+		<sw-image replace img text="I am replaced with an &lt;img&gt; element"></sw-image>
 	</p>
 	<div style="margin: 0 0 1rem;">
 		<code>&lt;sw-image fluid width="960" height="540" class="img-fluid"&gt;&lt;/sw-image&gt;</code>
